# CatPrism

./: Improvement.md  README.md  contributing.md  license.md  release_notes_v_0_1.md
.github/workflows/: ci.yml  lean-ci.yml
core/haskell/: README.md
core/haskell/lib/CatPrism/: Core.hs
core/lean/: CatPrism.lean  CatPrism_examples.lean  Core.lean  lakefile.lean  lean-toolchain
core/lean/Core/: EpsFunctor.lean  RawPrefunctor.lean  Tactics.lean
docs/: AdjointDisplacement.md  CatPrism_MathCore.md  Codex_Pipeline.md  CohomologicalCollapse.md  CollapseEntrophy.md  CollapseSurfaceTheory.md  CollapseTopology  ErrorLocalization.md  FunctorEnergyModel.md  FunctorExamples.md  FunctorThermodynamics.md  GraphCompiler.md  LeanFoundation.md  LeanProofTatics.md  LeanTypeLattice.md  MetricAlgebra  MetricgrediantField.md  PhaseSemantics.md  SemanticFlowMap.md  SheafProjection.md  TensorCollapse.md  VisualizationEngine.md  approx_functor.md  docs_Build.md  docs_CatPrism_MathCore.md  docs_EpsFunctor.md  docs_Examples.md  docs_Export_Format.md  docs_HomotopyMetric.md  docs_JSON_Schema.md  docs_Metrics.md  docs_Spec_Syntax.md  docs_TopologyView.md  usage.md
examples/: Example2.cat  Example3.cat  Example4.cat  Projection1.cat  RotApprox.cat
parser/: Cargo.toml
parser/src/: ast.rs  cli.rs  export.rs  main.rs  parser.rs
parser/templates/: functor.lean
renderer/: catprism-render.mjs  demo.html  styles.css  visualize.js
renderer/examples/: Projection1.ast.json
spec/: syntax.cat
tests/lean/: FunctorIdentity.lean  PhaseMetric.lean  UnitEps.lean
