[package]
name = "catprism"
version = "0.1.0"
edition = "2021"
authors = ["Jinwoo Jang <jinwoo@example.com>"]
description = "A DSL for category-theoretic projection and functorial semantics."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"

[features]
default = []

